--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.21.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
-    "mongoose": "^8.8.2"
+    "graphql-http": "^1.22.3",
+    "mongoose": "^8.8.2",
+    "ruru": "^2.0.0-beta.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
